adding content completed somewhat

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -137,7 +137,7 @@ input, select {
         padding: 1rem;
     }
 
-    .main-content {
+    .todo-ul-class {
         background-color: rgb(113, 43, 117);
         padding: 2rem;
     }
