todoObject maker setup and ghost div fixups

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -172,6 +172,11 @@ input, select {
                 .ghost-div {
                     display: none;
                     flex-direction: column;
+                    gap: 10px;
+
+                    input {
+                        width: 250px;
+                    }
                 }
             }
         }
