todo maker under construction/testing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -158,6 +158,10 @@ input, select {
                 display: none;
             }
 
+            li {
+                display: flex;
+            }
+
 
             .ul-header {
             display: flex;
