--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -103,15 +103,33 @@ input, select {
 }
 //--------------------------------------------------------------
 
-* {
+/* * {
     outline:rgb(199, 75, 80) 2px solid !important;
-}
+} */
 
 .main-grid {
     display: grid;
     grid-template: 80px 1fr / 250px 1fr;
     width: 100%;
     height: 100vh;
+
+    .description-element-div {
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(111, 0, 255);
+        width: 350px;
+        height:200px;
+        position: fixed;
+        padding: 1rem;
+        justify-self: center;
+        align-self: center; 
+        gap: 15px;
+
+        button {
+            width: 25px;
+            height: 25px;
+        }
+    }
 
 
     .header-nav {
@@ -153,6 +171,7 @@ input, select {
             width: 900px;
             height: 500px;
 
+
             .svg-buttons-div {
                 order: 2;
                 display: none;
@@ -160,14 +179,18 @@ input, select {
 
             li {
                 display: flex;
+                justify-content: space-between;
             }
 
 
             .ul-header {
             display: flex;
             order: 0;
+            justify-content: space-between;
 
             }
+
+        
     
             .normal-button {
                 order: 1;
