--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -116,7 +116,7 @@ input, select {
     .description-element-div {
         display: flex;
         flex-direction: column;
-        background-color: rgb(111, 0, 255);
+        background-color: rgb(168, 218, 220);
         width: 350px;
         height:250px;
         position: fixed;
@@ -124,6 +124,7 @@ input, select {
         justify-self: center;
         align-self: center; 
         gap: 15px;
+        border-radius: 2rem;
 
         button {
             width: 25px;
@@ -138,7 +139,7 @@ input, select {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        background-color: rgb(199, 75, 80);
+        background-color: rgb(51, 92, 103);
         padding: 0 1rem 0 1rem;
 
         .nav-left, .nav-right {
@@ -151,25 +152,41 @@ input, select {
         grid-row: 2 / -1;
         display: flex;
         flex-direction: column;
-        background-color: rgb(212, 155, 84);
+        background-color: rgb(224, 159, 62);
         padding: 1rem;
+        color: rgb(84, 11, 14);
+        font-weight: bolder;
+        letter-spacing: 3px;
+        font-family: monospace;
+        font-size: 1.1rem;
+
+        .functions-ul {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            list-style: none;
+            margin-top: 2.2rem;
+        }
+        
     }
 
     .anchor-div {
-        background-color: rgb(113, 43, 117);
+        background-color: rgb(158, 42, 43);
         display: flex;
         justify-content: center;
         align-items: center;
 
         .todo-ul-class {
     
-            background-color: rgb(64, 24, 66);
+            background-color: rgb(255, 243, 176);
             padding: 2rem;
             display: grid;
             grid-template: repeat(15, 1fr) / 1fr;
-            color: white;
+            color: black;
             width: 900px;
             height: 500px;
+            border-radius: 1.5em;
+            gap: 1.5rem;
 
 
             .svg-buttons-div {
@@ -180,6 +197,9 @@ input, select {
             li {
                 display: flex;
                 justify-content: space-between;
+                border-bottom:rgb(224, 159, 62) 2px solid;
+                padding-bottom: 1rem;
+    
             }
 
 
@@ -187,10 +207,10 @@ input, select {
             display: flex;
             order: 0;
             justify-content: space-between;
+            color: rgb(32, 58, 65);
+            text-decoration: underline;
 
             }
-
-        
     
             .normal-button {
                 order: 1;
@@ -200,6 +220,11 @@ input, select {
                     display: none;
                     flex-direction: column;
                     gap: 10px;
+                    background-color: rgb(224, 159, 62);
+                    padding: 1.5rem;
+                    width: 255px;
+                    border-radius: 1.5rem;
+                    margin-top: 15px;
 
                     input {
                         width: 250px;
